@@ -1,8 +1,8 @@
 Package: RecordTest
 Type: Package
 Title: Inference Tools in Time Series Based on Record Statistics
-Version: 2.1.1
-Date: 2022-11-03
+Version: 2.1.2
+Date: 2023-03-15
 Authors@R: c(
   person("Jorge", "Castillo-Mateo", role = c("aut","cre","cph"), email = "jorgecastillomateo@gmail.com", comment = c(ORCID = "0000-0003-3859-0248")),
   person("Ana C.", "Cebrián", role = "ths", comment = c(ORCID = "0000-0002-9052-9674")),
@@ -19,7 +19,8 @@ Description: Statistical tools based on the probabilistic properties of the
   record occurrence in a sequence of independent and identically distributed 
   continuous random variables. In particular, tools to prepare a time series 
   as well as distribution-free trend and change-point tests and graphical 
-  tools to study the record occurrence. 
+  tools to study the record occurrence. Details about the implemented tools 
+  can be found in Castillo-Mateo et al. (2023) <doi:10.18637/jss.v106.i05>.
 License: GPL-3
 URL: https://github.com/JorgeCastilloMateo/RecordTest
 BugReports: https://github.com/JorgeCastilloMateo/RecordTest/issues
@@ -27,4 +28,4 @@ VignetteBuilder: knitr
 Encoding: UTF-8
 LazyData: true
 NeedsCompilation: no
-RoxygenNote: 7.2.1
+RoxygenNote: 7.2.3
